--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "frontend_assesment_july_25_2023",
   "version": "0.1.0",
+  "proxy": "https://fakestoreapi.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
