--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "proxy": "https://fakestoreapi.com",
   "private": true,
+  "main": "index.tsx",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.16",
+    "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
@@ -16,15 +19,16 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-scripts-ts": "^3.1.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-bootstrap": "^0.26.2"
   }
 }
